# mimicry

./: Cargo.toml  README.md
examples/: cli.rs
mimicry/: Cargo.toml  failed.md
mimicry-arg/mimicry-arg-derive/: Cargo.toml
mimicry-arg/mimicry-arg-derive/src/: args.rs  lib.rs
mimicry-derive/src/: lib.rs
mimicry/mimicry-arg/: Cargo.toml  initial.md
mimicry/mimicry-arg/src/: lib.rs
mimicry/mimicry-derive/: Cargo.toml
mimicry/src/: lib.rs
src/: lib.rs  main.rs
tests/: mimicry_tests.rs
