[package]
name = "mimic_sandbox"
version = "0.1.0"
authors = ["manghi <manghirs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimicry = {path = "mimicry"}
strum           = "0.23"
strum_macros    = "0.23"
