[package]
name = "mimicry"
version = "0.1.0"
authors = ["manghi <manghirs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimicry-derive = { path = "mimicry-derive" }
mimicry-arg = { path = "mimicry-arg" }
strum = "0.23"
strum_macros = "0.23"
