[package]
name = "mimicry-derive"
version = "0.1.0"
authors = ["manghi <manghirs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "*"
syn = { version = "1.0.*", features = ["full"] }
quote = "1.0.*"
